[gd_scene load_steps=3 format=3 uid="uid://cjmorw1hn0gjy"]

[ext_resource type="Script" path="res://Assets/Code/component_window.gd" id="1_m76b3"]
[ext_resource type="Theme" uid="uid://bbaihvnlb6xkq" path="res://Assets/Nodes/UI/panel_theme.tres" id="2_hs6sj"]

[node name="ComponentWindow" type="Window"]
size = Vector2i(200, 150)
visible = false
borderless = true
popup_window = true
script = ExtResource("1_m76b3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="EditButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_hs6sj")
text = "Editar"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_hs6sj")
text = "Excluir"

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
